--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "build": "npm run build:circuit && npm run build:contract && npm run build:browserify",
     "browserify": "npm run build:browserify",
     "test": "npx truffle test",
-    "migrate": "npm run migrate:kovan",
+    "migrate": "npm run migrate:ropsten",
     "migrate:dev": "npx truffle migrate --network development --reset",
-    "migrate:kovan": "npx truffle migrate --network kovan --reset",
+    "migrate:ropsten": "npx truffle migrate --network ropsten --reset",
     "migrate:rinkeby": "npx truffle migrate --network rinkeby --reset",
     "migrate:mainnet": "npx truffle migrate --network mainnet",
     "eslint": "npx eslint --ignore-path .gitignore .",
